@@ -19,8 +19,8 @@ ROOTDIR=../..
 include $(ROOTDIR)/Makefile.common
 include $(ROOTDIR)/Makefile.best_binaries
 
-CAMLC := $(BEST_OCAMLC) -nostdlib -I $(ROOTDIR)/stdlib
-CAMLOPT := $(BEST_OCAMLOPT) -nostdlib -I $(ROOTDIR)/stdlib
+CAMLC := $(BEST_OCAMLC) $(STDLIBFLAGS)
+CAMLOPT := $(BEST_OCAMLOPT) $(STDLIBFLAGS)
 
 ifneq "$(CCOMPTYPE)" "msvc"
 OC_CFLAGS += -g
